<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradients"
    tools:context="com.tyrata.tyrata.ui.input.SignInActivity">

  <ImageView
      android:id="@+id/register_logo"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:adjustViewBounds="true"
      android:contentDescription="@string/login_logo_desc"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/tyrata" />

  <EditText
      android:id="@+id/input_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:backgroundTint="@color/white"
      android:drawablePadding="12dp"
      android:drawableStart="@drawable/ic_email_white_24dp"
      android:ems="10"
      android:hint="@string/login_email"
      android:inputType="textEmailAddress"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_logo"
      tools:targetApi="lollipop" />

  <EditText
      android:id="@+id/input_password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/white"
      android:drawablePadding="12dp"
      android:drawableStart="@drawable/ic_lock_outline_white_24dp"
      android:ems="10"
      android:hint="@string/login_password"
      android:inputType="textPassword"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_email"
      tools:targetApi="lollipop" />

  <Button
      android:id="@+id/button_register_submit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:background="#F5E01B"
      android:onClick="authenticateUser"
      android:text="@string/login_login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_password" />

  <TextView
      android:visibility="gone"
      android:id="@+id/textView_forgot_pwd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/login_forgot_pwd"
      android:textColor="#F5E01B"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@+id/button_register_submit"
      app:layout_constraintTop_toBottomOf="@+id/button_register_submit" />

  <TextView
      android:visibility="gone"
      android:id="@+id/textView_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:onClick="switchToSignUp"
      android:text="@string/login_register"
      android:textColor="#F5E01B"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView_register2" />

  <TextView
      android:visibility="gone"
      android:id="@+id/textView_register2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:onClick="switchToSignUp"
      android:text="@string/login_no_acc"
      android:textColor="@color/white"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView_forgot_pwd" />

</android.support.constraint.ConstraintLayout>
