<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_gradients"
    tools:context="com.tyrata.tyrata.ui.input.SignUpActivity">

  <ImageView
      android:id="@+id/register_logo"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:adjustViewBounds="true"
      android:contentDescription="@string/login_logo_desc"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/tyrata" />

  <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/register_upload"
      android:layout_width="130dp"
      android:layout_height="130dp"
      android:layout_gravity="center"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp"
      android:layout_weight="1"
      android:cropToPadding="false"
      android:src="@drawable/ic_camera"
      app:civ_border_color="@color/transparent_white"
      app:civ_border_width="4dp"
      app:layout_constraintBottom_toBottomOf="@+id/edittext_register_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittext_register_username" />

  <EditText
      android:id="@+id/edittext_register_username"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/white"
      android:drawablePadding="12dp"
      android:drawableStart="@drawable/ic_perm_identity_white_24dp"
      android:ems="10"
      android:hint="@string/register_username"
      android:inputType="text"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_logo"
      tools:targetApi="lollipop" />

  <EditText
      android:id="@+id/edittext_register_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/white"
      android:drawablePadding="12dp"
      android:drawableStart="@drawable/ic_email_white_24dp"
      android:ems="10"
      android:hint="@string/login_email"
      android:inputType="textEmailAddress"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toStartOf="@+id/register_upload"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittext_register_username"
      tools:targetApi="lollipop" />

  <EditText
      android:id="@+id/edittext_register_phone"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/white"
      android:drawablePadding="12dp"
      android:drawableStart="@drawable/ic_call_white_24dp"
      android:ems="10"
      android:hint="@string/register_phone"
      android:inputType="phone"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toStartOf="@+id/register_upload"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittext_register_email"
      tools:targetApi="lollipop" />

  <EditText
      android:id="@+id/edittext_register_password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/white"
      android:drawablePadding="12dp"
      android:drawableStart="@drawable/ic_lock_outline_white_24dp"
      android:ems="10"
      android:hint="@string/login_password"
      android:inputType="textPassword"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittext_register_phone"
      tools:targetApi="lollipop" />

  <EditText
      android:id="@+id/edittext_register_confirmpass"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/white"
      android:drawablePadding="12dp"
      android:drawableStart="@drawable/ic_lock_outline_white_24dp"
      android:ems="10"
      android:hint="@string/register_confirm"
      android:inputType="textPassword"
      android:singleLine="true"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittext_register_password"
      tools:targetApi="lollipop" />

  <Button
      android:id="@+id/button_register_submit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:background="#F5E01B"
      android:onClick="registerUser"
      android:text="@string/login_register"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittext_register_confirmpass" />

</android.support.constraint.ConstraintLayout>
